--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "contentful": "^9.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
