--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "contentful": "^9.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-player": "^2.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.6.1",
